pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: employee-api
  labels:
    app: employee-api
spec:
  containers:
  - name: employee-api
    image: sothy/employee-api:uat-3
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 4000
